twitter login is working

--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "express-session": "^1.14.1",
     "jade": "~1.11.0",
+    "mongodb": "^2.2.9",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-twitter": "^1.0.4",
     "serve-favicon": "~2.3.0"
   },
   "description": "https://www.freecodecamp.com/challenges/build-a-voting-app",
