--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "express-session": "^1.14.1",
     "jade": "~1.11.0",
+    "jquery": "^3.1.1",
     "mongodb": "^2.2.9",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
