--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "express-session": "^1.14.1",
+    "highcharts": "^5.0.4",
     "jade": "~1.11.0",
     "jquery": "^3.1.1",
     "mongodb": "^2.2.9",
